# pam-desktop-clean

./: .env  .env.development  .env.local  .env.production  .eslintignore  .gitignore  PUSH_TEST.txt  README.md  README_MOJAVE.md  app.js  eslint.config.mjs  index.html  index.html.BAK.conflict  package-lock.json  package.json  package.json.BAK  package.json.BAK.BAK.conflict  package.json.bak  styles.css  tauri.conf.json  tsconfig.json  tsconfig.typecheck.json  vite.config.mts  vite.config.ts
.github/workflows/: ci.yml
assets/: App-Bo9BWQHB.js  index-A_E24npU.js
js/: app.js
scripts/: resolve-conflicts.js
src/: App.tsx  App.tsx.BAK  assetSchemas.ts  docTypes.ts  env.d.ts  main.ts.bak  main.tsx  main.tsx.BAK  main.tsx.BAK.BAK.conflict  styles.css  theme.css  types.ts
src-tauri/: Cargo.toml  Cargo.toml.BAK.conflict  build.rs.BAK.conflict  tauri.conf.json  tauri.conf.json.BAK.conflict
src-tauri/src/: main.rs  main.rs.BAK.conflict
src/components/: AssetForm.tsx  AssetRegisterPanel.tsx  AssetShell.tsx  AssetsPanel.tsx  CategorySelect.tsx  DocLinker.tsx  DocsPanel.tsx  DocumentForm.tsx  DocumentRegisterPanel.tsx  DocumentsPanel.tsx  ErrorBoundary.tsx  FrontPage.tsx  Page.tsx  PamAppShell.tsx  PeopleForm.tsx  PeoplePanel.tsx  PeoplePanelSmoke.tsx  PersonSelect.tsx  ReportingPanel.tsx  page.css
src/constants/: assetCategories.ts
src/devtools/: migrateAssets.ts
src/lib/: assetLinks.ts  assetNumber.ts  compatDocs.ts  config.ts  docsStore.ts  peopleStore.ts  reporting.ts
src/styles/: forms.css
src/types/: types.ts
src/utils/: emailSender.ts  pdf.ts
(+1 files in other folders)
