[package]
name = "pam-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
zeroize = "1"
base64 = "0.22"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
